[package]
name = "find-duplicate-files"
version = "0.1.0"
authors = ["Tom Zakrajsek <tzakrajsek@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
ring = "0.16.20"
data-encoding = "2.3.2"
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.1.0"

